<resources>
    <string name="app_name">SchizoBasedApp</string>
    <string name="dummy_button">Schizo Button</string>

    <string name="fog_is_coming">fog is\ncoming</string>

    <string name="title_activity_anti_babylon">AntiBabylon</string>
    <string name="anti_babylon_image">Anti Babylon Image</string>
    <string name="antichrist">Can you troll the Antichrist?</string>

    <string name="title_activity_literally_me">Who is literally me?</string>
    <string name="click">CLICK</string>
    <string name="literally">LITERALLY</string>
    <string name="me">ME</string>
    <string name="bateman">Patrick Bateman</string>
    <string name="joker">Joker</string>
    <string name="gosling">Ryan Gosling</string>
    <string name="durden">Tyler Durden</string>
    <string name="paul">Let\'s see Paul Alen\'s card</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="gru">Gru with gun meme</string>
    <string name="movie">Write movie title</string>
    <string name="blade_runner">Blade Runner 2049</string>
    <string name="drive">Drive</string>
    <string name="finish_job">FINISH YOUR JOB</string>

    <string name="glycerine">C₂H₅(OH)₃</string>
    <string name="nitric_acidV">HNO₃</string>
    <string name="nitric_acidIII">HNO₂</string>
    <string name="sodium_nitrateV">NaNO₃</string>
    <string name="sodium_nitrateIII">NaNO₂</string>
    <string name="nitroglycerin">C₂H₅(NO₃)₃</string>
    <string name="water">H₂O</string>
    <string name="sawdust">SAWDUST</string>
    <string name="tnt">TNT</string>
    <string name="sodium">Na</string>
    <string name="sodium_hydroxide">NaOH</string>
    <string name="nitro">N</string>
    <string name="oxygen">O₂</string>
    <string name="nitric_oxide">N₂O₅</string>
    <string name="nitric_oxide2">N₂O₃</string>
</resources>