<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.SchizoBasedApp.FullscreenContainer"
    tools:context=".GoslingActivity">

    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gruIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/gru_one"
            android:contentDescription="@string/gru" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/movieEt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="@string/movie"
                android:hint="@string/movie"
                android:inputType="text"
                android:textColorHint="#212121" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bladeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blade_runner"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:layout_gravity="end" />

                <TextView
                    android:id="@+id/driveTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drive"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:layout_gravity="end" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.SchizoBasedApp.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button"
                android:textColor="#80D8FF" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>